--- a/ra_biapps/dbt_project.yml
+++ b/ra_biapps/dbt_project.yml
@@ -35,50 +35,17 @@ models:
       sde_adapters:
           materialized: view
           schema: staging
-          sde_harvest_projects:
-              enabled: true
-              tags: ["harvest", "projects","stitch"]
-          sde_jira_projects:
-              enabled: true
-              tags: ["jira", "projects","stitch"]
-          sde_asana_projects:
-              enabled: true
-              tags: ["asana", "projects","stitch"]
-          sde_hubspot_crm:
-              enabled: true
-              tags: ["hubspot", "crm","stitch"]
-          sde_mailchimp_email:
-              enabled: true
-              tags: ["mailchimp", "email","stitch"]
-          sde_segment_events:
-              enabled: true
-              tags: ["segment", "events","segment_warehouse"]
-          sde_stripe_payments:
-              enabled: false
-              tags: ["stripe", "payments","stitch"]
-          sde_xero_accounting:
-              enabled: true
-              tags: ["xero", "accounting","stitch"]
       sil_marts:
           materialized: table
-          sil_crm:
-            enabled: true
-            tags: ["crm","projects","email","payments","accounting"]
-          sil_finance:
-            enabled: true
-            tags: ["payments","accounting"]
-          sil_marketing:
-            enabled: true
-            tags: ["payments","accounting"]
   vars:
       enable_harvest_projects:  true
       enable_hubspot_crm:       true
-      enable_asana_projects:    true
+      enable_asana_projects:    false
       enable_jira_projects:     true
       enable_stripe_payments:   true
       enable_xero_accounting:   true
       enable_mailchimp_email:   true
-      enable_segment_events:    true 
+      enable_segment_events:    true
 seeds:
   ra_bi_apps:
     schema: seed_data
