renamed all sources to include "_source" in variable name

--- a/ra_biapps/dbt_project.yml
+++ b/ra_biapps/dbt_project.yml
@@ -38,14 +38,14 @@ models:
       sil_marts:
           materialized: table
   vars:
-      enable_harvest_projects:      true
-      enable_hubspot_crm:           true
-      enable_asana_projects:        true
-      enable_jira_projects:         true
-      enable_stripe_payments:       true
-      enable_xero_accounting:       true
-      enable_mailchimp_email:       true
-      enable_segment_events:        true
+      enable_harvest_projects_source:      true
+      enable_hubspot_crm_source:           true
+      enable_asana_projects_source:        true
+      enable_jira_projects_source:         true
+      enable_stripe_payments_source:       true
+      enable_xero_accounting_source:       true
+      enable_mailchimp_email_source:       true
+      enable_segment_events_source:        true
       enable_crm_warehouse:         true
       enable_finance_warehouse:     true
       enable_projects_warehouse:    true
