--- a/ra_biapps/dbt_project.yml
+++ b/ra_biapps/dbt_project.yml
@@ -36,7 +36,7 @@ on-run-end:
 
 models:
   ra_bi_apps:
-      sde_adapters:
+      t_adapters:
           materialized: view
           schema: staging
       sil_marts:
