--- a/ra_dw/dbt_project.yml
+++ b/ra_dw/dbt_project.yml
@@ -37,7 +37,7 @@ on-run-end:
 models:
   ra_data_warehouse:
       sta_adapters:
-          materialized: view
+          materialized: ephemeral
           schema: staging
       int_integrations:
           materialized: view
@@ -59,5 +59,5 @@ models:
       enable_projects_warehouse:    true
       enable_marketing_warehouse:   true
 seeds:
-  ra_data_warehouse:
+  ra_bi_apps:
     schema: seed_data
