--- a/ra_dw/dbt_project.yml
+++ b/ra_dw/dbt_project.yml
@@ -53,7 +53,7 @@ models:
 # data sources
       enable_harvest_projects_source:      true
       enable_hubspot_crm_source:           true
-      hubspot_crm_source_type:             fivetran
+      hubspot_crm_source_type:             stitch
       enable_asana_projects_source:        true
       enable_jira_projects_source:         true
       enable_stripe_payments_source:       true
