--- a/ra_dw/dbt_project.yml
+++ b/ra_dw/dbt_project.yml
@@ -65,6 +65,8 @@ models:
       enable_intercom_messaging_source:    true
       enable_custom_source_1:              false
       enable_custom_source_2:              false
+      enable_mixpanel_events_source:       true
+      mixpanel_events_source_type:         fivetran
 # warehouse modules
       enable_crm_warehouse:         true
       enable_finance_warehouse:     true
@@ -73,8 +75,8 @@ models:
       enable_ads_warehouse:         true
       enable_product_warehouse:     true
 
-      segment_sessionization_trailing_window: 3
-      segment_inactivity_cutoff: 30 * 60
+      web_sessionization_trailing_window: 3
+      web_inactivity_cutoff: 30 * 60
 
 seeds:
   ra_data_warehouse:
