--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,6 +35,7 @@ models:
                   projects_table: stitch_asana.projects
                   tasks_table: stitch_asana.tasks
                   users_table: stitch_asana.users
+                  tags: ["asana", "projects"]
           stg_facebook_ads:
               vars:
                   id-prefix: fbads-
@@ -44,11 +45,13 @@ models:
                   campaigns_table: stitch_facebook_ads.campaigns
                   ads_insights_age_and_gender_table: stitch_facebook_ads.ads_insights_age_and_gender
                   ads_insights_table: stitch_facebook_ads.ads_insights
+                  tags: ["facebook", "ads", "marketing"]
           stg_google_ads:
               vars:
                   id-prefix: gads-
                   accounts_table: stitch_google_ads.accounts
                   campaigns_table: stitch_google_ads.campaigns
+                  tags: ["google_ads", "ads", "marketing"]
           stg_harvest_projects:
               vars:
                   id-prefix: harvest-
@@ -65,6 +68,7 @@ models:
                   user_projects_table: rittman_analytics.user_projects
                   user_project_tasks_table: rittman_analytics.user_project_tasks
                   expenses_table: rittman_analytics.expenses
+                  tags: ["harvest", "projects"]
           stg_hubspot_crm:
               vars:
                   id-prefix: hubspot-
@@ -83,11 +87,13 @@ models:
                   fivetran_pipeline_table: fivetran_hubspot_euwest2.pipeline
                   fivetran_property_history_table: fivetran_hubspot_euwest2.property_history
                   fivetran_deal_company_table: fivetran_hubspot_euwest2.deal_company
+                  tags: ["hubspot", "crm"]
           stg_intercom_messaging:
               vars:
                   id-prefix: intercom-
                   stitch_contacts_table: stitch_intercom.contacts
                   stitch_conversations_table: stitch_intercom.conversations
+                  tags: ["intercom", "messaging"]
           stg_jira_projects:
               vars:
                   id-prefix: jira-
@@ -97,6 +103,7 @@ models:
                   stitch_project_categories_table: stitch_jira.project_categories
                   stitch_issues_table: stitch_jira.issues
                   stitch_users_table: stitch_jira.users
+                  tags: ["jira", "projects"]
           stg_mailchimp_email:
               vars:
                   id-prefix: mailchimp-
@@ -104,17 +111,20 @@ models:
                   stitch_reports_email_activity_table: stitch_mailchimp.reports_email_activity
                   stitch_lists_table: stitch_mailchimp.lists
                   stitch_campaigns_table: stitch_mailchimp.campaigns
+                  tags: ["mailchimp","email","marketing"]
           stg_mixpanel_events:
               vars:
                   id-prefix: mixpanel-
                   etl: fivetran
                   fivetran_event_table: fivetran_mixpanel.event
                   stitch_export_table: mixpanel_stitch.export
+                  tags: ["mixpanel", "events","marketing"]
           stg_segment_events:
               vars:
                   id-prefix: segment-
                   tracks_table: company_website.tracks
                   pages_table: company_website.pages
+                  tags: ["segment", "events","marketing"]
           stg_stripe_payments:
               vars:
                   id-prefix: stripe-
@@ -123,6 +133,7 @@ models:
                   stitch_events_table: stitch_stripe.events
                   stitch_payout_transactions_table: payout_transactions
                   stitch_payouts_table: stitch_stripe.payouts
+                  tags: ["stripe", "payments","finance"]
           stg_xero_accounting:
               vars:
                   id-prefix: xero-
@@ -134,6 +145,7 @@ models:
                   stitch_expense_claims_table: xero.expense_claims
                   stitch_invoices_table: xero.invoices
                   stitch_payments_table: xero.payments
+                  tags: ["xero", "accounting","finance"]
 # integration layer settings
       integration:
           materialized: view
