--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,110 +30,122 @@ models:
           stg_asana_projects:
               vars:
                   id-prefix: asana-
-                  staff_email_domain: example.com
-                  workspaces_table: #schema.workspaces
-                  projects_table: #schema.projects
-                  tasks_table: #schema.tasks
-                  users_table: #schema.users
+                  staff_email_domain: rittmananalytics.com
+                  workspaces_table: stitch_asana.workspaces
+                  projects_table: stitch_asana.projects
+                  tasks_table: stitch_asana.tasks
+                  users_table: stitch_asana.users
+                  tags: ["asana", "projects"]
           stg_facebook_ads:
               vars:
                   id-prefix: fbads-
-                  adcreative_table: #schema.adcreative
-                  ads_table: #schema.ads
-                  adsets_table: #schema.adsets
-                  campaigns_table: #schema.campaigns
-                  ads_insights_age_and_gender_table: #schema.ads_insights_age_and_gender
-                  ads_insights_table: #schema.ads_insights
+                  adcreative_table: stitch_facebook_ads.adcreative
+                  ads_table: stitch_facebook_ads.ads
+                  adsets_table: stitch_facebook_ads.adsets
+                  campaigns_table: stitch_facebook_ads.campaigns
+                  ads_insights_age_and_gender_table: stitch_facebook_ads.ads_insights_age_and_gender
+                  ads_insights_table: stitch_facebook_ads.ads_insights
+                  tags: ["facebook", "ads", "marketing"]
           stg_google_ads:
               vars:
                   id-prefix: gads-
-                  accounts_table: #schema.accounts
-                  campaigns_table: #schema.campaigns
+                  accounts_table: stitch_google_ads.accounts
+                  campaigns_table: stitch_google_ads.campaigns
+                  tags: ["google_ads", "ads", "marketing"]
           stg_harvest_projects:
               vars:
                   id-prefix: harvest-
-                  staff_email_domain: example.com
-                  clients_table: #schema.clients
-                  contacts_table: #schema.contacts
-                  invoices_table: #schema.invoices
-                  invoice_line_items_table: #schema.invoice_line_items
-                  projects_table: #schema.projects
-                  tasks_table: #schema.tasks
-                  project_tasks_table: #schema.project_tasks
-                  time_entries_table: #schema.time_entries
-                  users_table: #schema.users
-                  user_projects_table: #schema.user_projects
-                  user_project_tasks_table: #schema.user_project_tasks
-                  expenses_table: #schema.expenses
+                  staff_email_domain: rittmananalytics.com
+                  clients_table: rittman_analytics.clients
+                  contacts_table: rittman_analytics.contacts
+                  invoices_table: rittman_analytics.invoices
+                  invoice_line_items_table: rittman_analytics.invoice_line_items
+                  projects_table: rittman_analytics.projects
+                  tasks_table: rittman_analytics.tasks
+                  project_tasks_table: rittman_analytics.project_tasks
+                  time_entries_table: rittman_analytics.time_entries
+                  users_table: rittman_analytics.users
+                  user_projects_table: rittman_analytics.user_projects
+                  user_project_tasks_table: rittman_analytics.user_project_tasks
+                  expenses_table: rittman_analytics.expenses
+                  tags: ["harvest", "projects"]
           stg_hubspot_crm:
               vars:
                   id-prefix: hubspot-
                   etl: stitch
-                  stitch_companies_table: #schema.companies
-                  stitch_contacts_table: #schema.contacts
-                  stitch_deals_table: #schema.deals
-                  stitch_owners_table: #schema.owners
-                  stitch_pipeline_stages_table: #schema.pipeline_stages
-                  stitch_deal_pipelines_table: #schema.deal_pipelines
-                  fivetran_company_table: #schema.company
-                  fivetran_contact_table: #schema.contact
-                  fivetran_deal_table: #schema.deal
-                  fivetran_owner_table: #schema.owner
-                  fivetran_pipeline_stage_table: #schema.pipeline_stage
-                  fivetran_pipeline_table: #schema.pipeline
-                  fivetran_property_history_table: #schema.property_history
-                  fivetran_deal_company_table: #schema.deal_company
+                  stitch_companies_table: stitch_hubspot.companies
+                  stitch_contacts_table: stitch_hubspot.contacts
+                  stitch_deals_table: stitch_hubspot.deals
+                  stitch_owners_table: stitch_hubspot.owners
+                  stitch_pipeline_stages_table: stitch_hubspot.pipeline_stages
+                  stitch_deal_pipelines_table: stitch_hubspot.deal_pipelines
+                  fivetran_company_table: fivetran_hubspot_euwest2.company
+                  fivetran_contact_table: fivetran_hubspot_euwest2.contact
+                  fivetran_deal_table: fivetran_hubspot_euwest2.deal
+                  fivetran_owner_table: fivetran_hubspot_euwest2.owner
+                  fivetran_pipeline_stage_table: fivetran_hubspot_euwest2.pipeline_stage
+                  fivetran_pipeline_table: fivetran_hubspot_euwest2.pipeline
+                  fivetran_property_history_table: fivetran_hubspot_euwest2.property_history
+                  fivetran_deal_company_table: fivetran_hubspot_euwest2.deal_company
+                  tags: ["hubspot", "crm"]
           stg_intercom_messaging:
               vars:
                   id-prefix: intercom-
-                  stitch_contacts_table: #schema.contacts
-                  stitch_conversations_table: #schema.conversations
+                  stitch_contacts_table: stitch_intercom.contacts
+                  stitch_conversations_table: stitch_intercom.conversations
+                  tags: ["intercom", "messaging"]
           stg_jira_projects:
               vars:
                   id-prefix: jira-
-                  staff_email_domain: example.com
-                  stitch_projects_table: #schema.projects
-                  stitch_project_types_table: #schema.project_types
-                  stitch_project_categories_table: #schema.project_categories
-                  stitch_issues_table: #schema.issues
-                  stitch_users_table: #schema.users
+                  staff_email_domain: rittmananalytics.com
+                  stitch_projects_table: stitch_jira.projects
+                  stitch_project_types_table: stitch_jira.project_types
+                  stitch_project_categories_table: stitch_jira.project_categories
+                  stitch_issues_table: stitch_jira.issues
+                  stitch_users_table: stitch_jira.users
+                  tags: ["jira", "projects"]
           stg_mailchimp_email:
               vars:
                   id-prefix: mailchimp-
-                  stitch_list_members_table: #schema.list_members
-                  stitch_reports_email_activity_table: #schema.reports_email_activity
-                  stitch_lists_table: #schema.lists
-                  stitch_campaigns_table: #schema.campaigns
+                  stitch_list_members_table: stitch_mailchimp.list_members
+                  stitch_reports_email_activity_table: stitch_mailchimp.reports_email_activity
+                  stitch_lists_table: stitch_mailchimp.lists
+                  stitch_campaigns_table: stitch_mailchimp.campaigns
+                  tags: ["mailchimp","email","marketing"]
           stg_mixpanel_events:
               vars:
                   id-prefix: mixpanel-
                   etl: fivetran
-                  fivetran_event_table: #schema.event
-                  stitch_export_table: #schema.export
+                  fivetran_event_table: fivetran_mixpanel.event
+                  stitch_export_table: mixpanel_stitch.export
+                  tags: ["mixpanel", "events","marketing"]
           stg_segment_events:
               vars:
                   id-prefix: segment-
-                  tracks_table: #schema.tracks
-                  pages_table: #schema.pages
+                  tracks_table: company_website.tracks
+                  pages_table: company_website.pages
+                  tags: ["segment", "events","marketing"]
           stg_stripe_payments:
               vars:
                   id-prefix: stripe-
-                  stitch_balance_transactions_table: #schema.balance_transactions
-                  stitch_charges_table: #schema.charges
-                  stitch_events_table: #schema.events
-                  stitch_payout_transactions_table: #schema.payout_transactions
-                  stitch_payouts_table: #schema.payouts
+                  stitch_balance_transactions_table: stitch_stripe.balance_transactions
+                  stitch_charges_table: stitch_stripe.charges
+                  stitch_events_table: stitch_stripe.events
+                  stitch_payout_transactions_table: payout_transactions
+                  stitch_payouts_table: stitch_stripe.payouts
+                  tags: ["stripe", "payments","finance"]
           stg_xero_accounting:
               vars:
                   id-prefix: xero-
-                  stitch_accounts_table: #schema.accounts
-                  stitch_categories_table: #schema.tracking_categories
-                  stitch_bank_transactions_table: #schema.bank_transactions
-                  stitch_contacts_table: #schema.contacts
-                  stitch_currencies_table: #schema.currencies
-                  stitch_expense_claims_table: #schema.expense_claims
-                  stitch_invoices_table: #schema.invoices
-                  stitch_payments_table: #schema.payments
+                  stitch_accounts_table: xero.accounts
+                  stitch_categories_table: xero.tracking_categories
+                  stitch_bank_transactions_table: xero.bank_transactions
+                  stitch_contacts_table: xero.contacts
+                  stitch_currencies_table: xero.currencies
+                  stitch_expense_claims_table: xero.expense_claims
+                  stitch_invoices_table: xero.invoices
+                  stitch_payments_table: xero.payments
+                  tags: ["xero", "accounting","finance"]
 # integration layer settings
       integration:
           materialized: view
@@ -150,27 +162,29 @@ models:
           schema: logs
 # source adapter enable/disable settings
   vars:
-      enable_harvest_projects_source:      false
-      enable_hubspot_crm_source:           false
-      enable_asana_projects_source:        false
-      enable_jira_projects_source:         false
-      enable_stripe_payments_source:       false
-      enable_xero_accounting_source:       false
-      enable_mailchimp_email_source:       false
-      enable_segment_events_source:        false
-      enable_google_ads_source:            false
-      enable_facebook_ads_source:          false
-      enable_intercom_messaging_source:    false
+      enable_harvest_projects_source:      true
+      enable_hubspot_crm_source:           true
+      hubspot_crm_source_type:             stitch
+      enable_asana_projects_source:        true
+      enable_jira_projects_source:         true
+      enable_stripe_payments_source:       true
+      enable_xero_accounting_source:       true
+      enable_mailchimp_email_source:       true
+      enable_segment_events_source:        true
+      enable_google_ads_source:            true
+      enable_facebook_ads_source:          true
+      enable_intercom_messaging_source:    true
       enable_custom_source_1:              false
       enable_custom_source_2:              false
-      enable_mixpanel_events_source:       false
+      enable_mixpanel_events_source:       true
+      mixpanel_events_source_type:         fivetran
 # warehouse modules
-      enable_crm_warehouse:         false
-      enable_finance_warehouse:     false
-      enable_projects_warehouse:    false
-      enable_marketing_warehouse:   false
-      enable_ads_warehouse:         false
-      enable_product_warehouse:     false
+      enable_crm_warehouse:         true
+      enable_finance_warehouse:     true
+      enable_projects_warehouse:    true
+      enable_marketing_warehouse:   true
+      enable_ads_warehouse:         true
+      enable_product_warehouse:     true
 
 
 
