--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: fishtown-analytics/dbt-utils
-    version: "0.1.16"
+  - package: fishtown-analytics/dbt_utils
+    version: 0.3.0
