--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,121 +30,136 @@ models:
           stg_asana_projects:
               vars:
                   id-prefix: asana-
+                  stitch_schema: stitch_asana
                   staff_email_domain: rittmananalytics.com
-                  workspaces_table: stitch_asana.workspaces
-                  projects_table: stitch_asana.projects
-                  tasks_table: stitch_asana.tasks
-                  users_table: stitch_asana.users
+                  stitch_workspaces_table: workspaces
+                  stitch_projects_table: projects
+                  stitch_tasks_table: tasks
+                  stitch_users_table: users
                   tags: ["asana", "projects"]
           stg_facebook_ads:
               vars:
                   id-prefix: fbads-
-                  adcreative_table: stitch_facebook_ads.adcreative
-                  ads_table: stitch_facebook_ads.ads
-                  adsets_table: stitch_facebook_ads.adsets
-                  campaigns_table: stitch_facebook_ads.campaigns
-                  ads_insights_age_and_gender_table: stitch_facebook_ads.ads_insights_age_and_gender
-                  ads_insights_table: stitch_facebook_ads.ads_insights
+                  stitch_schema: stitch_facebook_ads
+                  stitch_adcreative_table: adcreative
+                  stitch_ads_table: ads
+                  stitch_adsets_table: adsets
+                  stitch_campaigns_table: campaigns
+                  stitch_ads_insights_age_and_gender_table: ads_insights_age_and_gender
+                  stitch_ads_insights_table: ads_insights
                   tags: ["facebook", "ads", "marketing"]
           stg_google_ads:
               vars:
                   id-prefix: gads-
-                  accounts_table: stitch_google_ads.accounts
-                  campaigns_table: stitch_google_ads.campaigns
+                  stitch_schema: stitch_google_ads
+                  stitch_accounts_table: accounts
+                  stitch_campaigns_table: campaigns
                   tags: ["google_ads", "ads", "marketing"]
           stg_harvest_projects:
               vars:
                   id-prefix: harvest-
+                  stitch_schema: rittman_analytics
                   staff_email_domain: rittmananalytics.com
-                  clients_table: rittman_analytics.clients
-                  contacts_table: rittman_analytics.contacts
-                  invoices_table: rittman_analytics.invoices
-                  invoice_line_items_table: rittman_analytics.invoice_line_items
-                  projects_table: rittman_analytics.projects
-                  tasks_table: rittman_analytics.tasks
-                  project_tasks_table: rittman_analytics.project_tasks
-                  time_entries_table: rittman_analytics.time_entries
-                  users_table: rittman_analytics.users
-                  user_projects_table: rittman_analytics.user_projects
-                  user_project_tasks_table: rittman_analytics.user_project_tasks
-                  expenses_table: rittman_analytics.expenses
+                  stitch_clients_table: clients
+                  stitch_contacts_table: contacts
+                  stitch_invoices_table: invoices
+                  stitch_invoice_line_items_table: invoice_line_items
+                  stitch_projects_table: projects
+                  stitch_tasks_table: tasks
+                  stitch_project_tasks_table: project_tasks
+                  stitch_time_entries_table: time_entries
+                  stitch_users_table: users
+                  stitch_user_projects_table: user_projects
+                  stitch_user_project_tasks_table: user_project_tasks
+                  stitch_expenses_table: expenses
                   tags: ["harvest", "projects"]
           stg_hubspot_crm:
               vars:
                   id-prefix: hubspot-
+                  stitch_schema: stitch_hubspot
+                  fivetran_schema: fivetran_hubspot_euwest2
                   etl: stitch
-                  stitch_companies_table: stitch_hubspot.companies
-                  stitch_contacts_table: stitch_hubspot.contacts
-                  stitch_deals_table: stitch_hubspot.deals
-                  stitch_owners_table: stitch_hubspot.owners
-                  stitch_pipeline_stages_table: stitch_hubspot.pipeline_stages
-                  stitch_deal_pipelines_table: stitch_hubspot.deal_pipelines
-                  fivetran_company_table: fivetran_hubspot_euwest2.company
-                  fivetran_contact_table: fivetran_hubspot_euwest2.contact
-                  fivetran_deal_table: fivetran_hubspot_euwest2.deal
-                  fivetran_owner_table: fivetran_hubspot_euwest2.owner
-                  fivetran_pipeline_stage_table: fivetran_hubspot_euwest2.pipeline_stage
-                  fivetran_pipeline_table: fivetran_hubspot_euwest2.pipeline
-                  fivetran_property_history_table: fivetran_hubspot_euwest2.property_history
-                  fivetran_deal_company_table: fivetran_hubspot_euwest2.deal_company
+                  stitch_companies_table: companies
+                  stitch_contacts_table: contacts
+                  stitch_deals_table: deals
+                  stitch_owners_table: owners
+                  stitch_pipeline_stages_table: pipeline_stages
+                  stitch_deal_pipelines_table: deal_pipelines
+                  fivetran_company_table: company
+                  fivetran_contact_table: contact
+                  fivetran_deal_table: deal
+                  fivetran_owner_table: owner
+                  fivetran_pipeline_stage_table: pipeline_stage
+                  fivetran_pipeline_table: pipeline
+                  fivetran_property_history_table: property_history
+                  fivetran_deal_company_table: deal_company
                   tags: ["hubspot", "crm"]
           stg_intercom_messaging:
               vars:
                   id-prefix: intercom-
-                  stitch_contacts_table: stitch_intercom.contacts
-                  stitch_conversations_table: stitch_intercom.conversations
+                  stitch_schema: stitch_intercom
+                  stitch_contacts_table: contacts
+                  stitch_conversations_table: conversations
                   tags: ["intercom", "messaging"]
           stg_jira_projects:
               vars:
                   id-prefix: jira-
+                  stitch_schema: stitch_jira
                   staff_email_domain: rittmananalytics.com
-                  stitch_projects_table: stitch_jira.projects
-                  stitch_project_types_table: stitch_jira.project_types
-                  stitch_project_categories_table: stitch_jira.project_categories
-                  stitch_issues_table: stitch_jira.issues
-                  stitch_users_table: stitch_jira.users
+                  stitch_projects_table: projects
+                  stitch_project_types_table: project_types
+                  stitch_project_categories_table: project_categories
+                  stitch_issues_table: issues
+                  stitch_users_table: users
                   tags: ["jira", "projects"]
           stg_mailchimp_email:
               vars:
                   id-prefix: mailchimp-
-                  stitch_list_members_table: stitch_mailchimp.list_members
-                  stitch_reports_email_activity_table: stitch_mailchimp.reports_email_activity
-                  stitch_lists_table: stitch_mailchimp.lists
-                  stitch_campaigns_table: stitch_mailchimp.campaigns
+                  stitch_schema: stitch_mailchimp
+                  stitch_list_members_table: list_members
+                  stitch_reports_email_activity_table: reports_email_activity
+                  stitch_lists_table: lists
+                  stitch_campaigns_table: campaigns
                   tags: ["mailchimp","email","marketing"]
           stg_mixpanel_events:
               vars:
                   id-prefix: mixpanel-
+                  stitch_schema: mixpanel_stitch
+                  fivetran_schema: fivetran_mixpanel
                   etl: fivetran
-                  fivetran_event_table: fivetran_mixpanel.event
-                  stitch_export_table: mixpanel_stitch.export
+                  fivetran_event_table: event
+                  stitch_export_table: export
                   tags: ["mixpanel", "events","marketing"]
           stg_segment_events:
               vars:
                   id-prefix: segment-
-                  tracks_table: company_website.tracks
-                  pages_table: company_website.pages
+                  etl: segment
+                  segment_schema: company_website
+                  segment_tracks_table: tracks
+                  segment_pages_table: pages
                   tags: ["segment", "events","marketing"]
           stg_stripe_payments:
               vars:
                   id-prefix: stripe-
-                  stitch_balance_transactions_table: stitch_stripe.balance_transactions
-                  stitch_charges_table: stitch_stripe.charges
-                  stitch_events_table: stitch_stripe.events
+                  stitch_schema: stitch_stripe
+                  stitch_balance_transactions_table: balance_transactions
+                  stitch_charges_table: charges
+                  stitch_events_table: events
                   stitch_payout_transactions_table: payout_transactions
-                  stitch_payouts_table: stitch_stripe.payouts
+                  stitch_payouts_table: payouts
                   tags: ["stripe", "payments","finance"]
           stg_xero_accounting:
               vars:
                   id-prefix: xero-
-                  stitch_accounts_table: xero.accounts
-                  stitch_categories_table: xero.tracking_categories
-                  stitch_bank_transactions_table: xero.bank_transactions
-                  stitch_contacts_table: xero.contacts
-                  stitch_currencies_table: xero.currencies
-                  stitch_expense_claims_table: xero.expense_claims
-                  stitch_invoices_table: xero.invoices
-                  stitch_payments_table: xero.payments
+                  stitch_schema: xero
+                  stitch_accounts_table: accounts
+                  stitch_categories_table: tracking_categories
+                  stitch_bank_transactions_table: bank_transactions
+                  stitch_contacts_table: contacts
+                  stitch_currencies_table: currencies
+                  stitch_expense_claims_table: expense_claims
+                  stitch_invoices_table: invoices
+                  stitch_payments_table: payments
                   tags: ["xero", "accounting","finance"]
 # integration layer settings
       integration:
@@ -164,7 +179,6 @@ models:
   vars:
       enable_harvest_projects_source:      true
       enable_hubspot_crm_source:           true
-      hubspot_crm_source_type:             stitch
       enable_asana_projects_source:        true
       enable_jira_projects_source:         true
       enable_stripe_payments_source:       true
@@ -177,7 +191,6 @@ models:
       enable_custom_source_1:              false
       enable_custom_source_2:              false
       enable_mixpanel_events_source:       true
-      mixpanel_events_source_type:         fivetran
 # warehouse modules
       enable_crm_warehouse:         true
       enable_finance_warehouse:     true
