--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -110,7 +110,7 @@ models:
               vars:
                   id-prefix: jira-
                   etl: stitch
-                  stitch_schema: stitch_jira
+                  stitch_schema: stitch_jira2
                   staff_email_domain: rittmananalytics.com
                   stitch_projects_table: projects
                   stitch_project_types_table: project_types
